--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -73,8 +73,7 @@ jobs:
         
         dotnet sonarscanner begin \
           /key:"${{ env.PROJECT_NAME }}" \
-          /organization:"zhongwang-cad" \
-          /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
+              /organization:"ae86jaywei          /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.host.url="https://sonarcloud.io" \
           /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
           /d:sonar.coverage.exclusions="**/*Test*/**,**/Tests/**"
